message and reaction

--- a/notebooks/parse_slack_data.ipynb
+++ b/notebooks/parse_slack_data.ipynb
@@ -372,7 +372,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -396,20 +396,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# what kind of messages are replied faster than others?"
+    "# what kind of messages are replied faster than others?\n",
+    "def messages_replied_faster(data, criterion='msg_type'):\n",
+    "\n",
+    "    data['time_sent'] = pd.to_datetime(data['time_sent'], unit='s')\n",
+    "    data['time_thread_end'] = pd.to_datetime(data['time_thread_end'], unit='s')\n",
+    "\n",
+    "   \n",
+    "    data['response_time'] = (data['time_thread_end'] - data['time_sent']).dt.total_seconds()\n",
+    "\n",
+    "   \n",
+    "    avg_response_time = data.groupby(criterion)['response_time'].mean().reset_index()\n",
+    "    avg_response_time = avg_response_time.sort_values(by='response_time', ascending=True)\n",
+    "\n",
+    "    return avg_response_time\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Relationship between # of messages and # of reactions"
+    "# Relationship between # of messages and # of reactions\n",
+    "def messages_reactions_relationship(data):\n",
+    "\n",
+    "    user_interaction = data.groupby('sender_id').agg({'message_content': 'count', 'reaction_count': 'sum'}).reset_index()\n",
+    "    correlation = user_interaction['message_content'].corr(user_interaction['reaction_count'])\n",
+    "    return correlation\n"
    ]
   },
   {
@@ -418,7 +436,29 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Classify messages into different categories such as questions, answers, comments, etc."
+    "# Classify messages into different categories such as questions, answers, comments, etc.\n",
+    "def classify_messages(data):\n",
+    "\n",
+    "    question_keywords = ['?', 'how', 'what', 'when', 'where', 'why', 'help']\n",
+    "    answer_keywords = ['answer:', 'solution:', 'reply:', 'here is', 'try this']\n",
+    "    comment_keywords = ['comment:', 'thoughts:', 'opinion:', 'agree', 'disagree']\n",
+    "\n",
+    "    categories = []\n",
+    "    for message in data['message_content']:\n",
+    "        message_lower = message.lower()\n",
+    "\n",
+    "        if any(keyword in message_lower for keyword in question_keywords):\n",
+    "            categories.append('Question')\n",
+    "        elif any(keyword in message_lower for keyword in answer_keywords):\n",
+    "            categories.append('Answer')\n",
+    "        elif any(keyword in message_lower for keyword in comment_keywords):\n",
+    "            categories.append('Comment')\n",
+    "        else:\n",
+    "            categories.append('Other')\n",
+    "\n",
+    "    data['Message Category'] = categories\n",
+    "\n",
+    "    return data\n"
    ]
   },
   {
