messages and top reaction with last classification

--- a/notebooks/parse_slack_data.ipynb
+++ b/notebooks/parse_slack_data.ipynb
@@ -432,7 +432,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -463,29 +463,72 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 38,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "user_id\n",
+      "U03UUR571A5    19\n",
+      "U03UVHCV6KB    19\n",
+      "U03UD68RQH3    18\n",
+      "U03U1FNPEUX    16\n",
+      "U03UJGP0C68    16\n",
+      "U03V785NLSU    16\n",
+      "U03UG0YHAUT    14\n",
+      "U03UJN29Y4C    12\n",
+      "U03V61VGQG0    10\n",
+      "U03UG4Q7V42     9\n",
+      "Name: reaction_count, dtype: int64\n"
+     ]
+    }
+   ],
    "source": [
-    "# Which users got the most reactions?"
+    "# Which users got the most reactions?\n",
+    "path_to_slack_data = '/home/estif/Documents/anonymized/all-resources/'\n",
+    "channel_name = 'Random'\n",
+    "reaction_data = parse_slack_reaction(path_to_slack_data, channel_name)\n",
+    "top_reacted_users = reaction_data.groupby('user_id')['reaction_count'].sum().nlargest(10)\n",
+    "print(top_reacted_users)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Model topics mentioned in the channel"
+    "# Model topics mentioned in the channel\n",
+    "\n",
+    "def extract_topics(data, channel_name):\n",
+    "    channel_data = data[data['channel'] == channel_name]['message_content']\n",
+    "    channel_text = ' '.join(channel_data)\n",
+    "    words = re.findall(r'\\b\\w+\\b', channel_text.lower())\n",
+    "    \n",
+    "    stop_words = {'the', 'and', 'to', 'a', 'is', 'in', 'it', 'of', 'that', 'this'}\n",
+    "    words = [word for word in words if word not in stop_words]\n",
+    "    word_counts = Counter(words)\n",
+    "    top_topics = word_counts.most_common(20)\n",
+    "    return top_topics\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# What are the topics that got the most reactions?"
+    "# What are the topics that got the most reactions?\n",
+    "\n",
+    "def top_reacted_messages(data_reaction, data, top_n=10):\n",
+    "    reaction_counts = data_reaction.groupby('message')['reaction_count'].sum().reset_index()\n",
+    "    top_reacted = reaction_counts.sort_values(by='reaction_count', ascending=False).head(top_n)\n",
+    "    top_messages = pd.merge(top_reacted, data, on='message', how='left')\n",
+    "\n",
+    "    return top_messages[['message', 'msg_content', 'reaction_count']]\n",
+    "\n"
    ]
   },
   {
@@ -497,11 +540,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Based on messages, reactions, references shared, and other relevant data such as classification of questions into techical question, comment, answer, aorder stu the python, statistics, and sql skill level of a user?"
+    "# Based on messages, reactions, references shared, and other relevant data such as classification of questions into techical question, comment, answer, aorder stu the python, statistics, and sql skill level of a user?\n",
+    "from nltk.tokenize import word_tokenize\n",
+    "from nltk.probability import FreqDist\n",
+    "\n",
+    "def extract_topics(data, channel_name):\n",
+    "    channel_data = data[data['channel'] == channel_name]['message_content']\n",
+    "    \n",
+    "    channel_text = ' '.join(channel_data)\n",
+    "    \n",
+    "    words = word_tokenize(channel_text)\n",
+    "    stop_words = set(stopwords.words('english'))\n",
+    "    words = [word.lower() for word in words if word.isalpha() and word.lower() not in stop_words]\n",
+    "    freq_dist = FreqDist(words)\n",
+    "    \n",
+    "    print(\"Top 20 Topics in\", channel_name)\n",
+    "    print(freq_dist.most_common(20))\n",
+    "\n"
    ]
   }
  ],
